Fixed the canvas height on iOS

--- a/wasm/pyxel.css
+++ b/wasm/pyxel.css
@@ -39,11 +39,4 @@ canvas#canvas {
     left: 0px;
     top: 0px;
     width: 100vw;
-    height: 100vh;
-}
-
-@supports (-webkit-touch-callout: none) {
-    canvas#canvas {
-        height: -webkit-fill-available;
-    }
 }
